--- a/components/Todo/Todo.module.css
+++ b/components/Todo/Todo.module.css
@@ -2,9 +2,23 @@
     margin: 20px 0;
 }
 
+.todo_header{
+    margin-top: 20px;
+    padding-bottom: 30px;
+}
+
+.input{
+    width: 50%;
+}
+
 .todoList{
-    margin: 40px 0;
-    /* border-style: solid; */
+    margin-top: 20px;
+    padding: 30px 0;
+    border-top: 1px;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px;
+    border-style: solid;
     
 }
 
